Update filters for events
